@@ -5,7 +5,7 @@
 
 Name:          tcl
 Summary:       Tcl scripting language development environment
-Version:       8.6a3
+Version:       8.6a4
 Release:       2
 License:       BSD
 Group:         Development/Languages
